config/samples/generic_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: tyk-gw-ingress
spec:
  ingressClassName: tyk
  tls:
    - secretName: tls-httpbin
      hosts:
        - myhttpbin
  rules:
    - host: myhttpbin
      http:
        paths:
          - backend:
              service:
                name: httpbin
                port:
                  number: 8000
            path: /httpbin
            pathType: Prefix
